# ts-server

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  Tupfile  Tuprules.tup  cleanup_files.sh  defines.js  make.sh  ts-server.files  ts-server.includes  ts-viz.includes  tup-generate.vardict
configs/: debug.config  qtc.config  release.config
src/: badrequestexception.h  baseexception.h  buffer.h  chunk.cpp  chunk.h  chunker.h  compressor.h  connection.cpp  connection.h  connectionmanager.cpp  connectionmanager.h  dbparseexception.h  decoder.h  decompressor.h  encoder.h  event.h  filereader.h  filewriter.h  garbagecollector.cpp  garbagecollector.h  instant.h  jqprocessor.h  linesplitter.h  main.cpp  mainloop.h  memory.cpp  memory.h  merger.h  options.h  pubconnmanager.cpp  pubconnmanager.h  publisherconnection.cpp  publisherconnection.h  queuemessage.h  queuepublisher.h  readermanager.cpp  readermanager.h  signalhandler.cpp  signalhandler.h  stream.cpp  (+11 more)
